--- a/voting_app/templates/voting_app/audio_type.html
+++ b/voting_app/templates/voting_app/audio_type.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 
-
 <h3>Аудио вопросы:</h3>
 <br>
     <form method="post" enctype="multipart/form-data" action="{% url 'vote_app:add_audio' %}">
@@ -13,6 +12,21 @@
 <br>
 <li><a href="{% url 'vote_app:question' %}">На предыдущую страницу</a></li>
 <br>
-
+{% for key, value in global_dict.items %}
+    <h3>Опрос: "{{ key }}"</h3>
+    {% for key2, value2 in value.items %}
+        {% for key3, value3 in answer_dict.items %}
+            {% if key2 == key3 %}
+                <h4>Вопрос: {{ key2 }}</h4>
+                {% for el in value2 %}
+                        <div class='reader'>
+                            <audio controls src="{{ el.audio.url }}" type='audio/mp3'></audio>
+                       </div>
+                {% endfor %}
+                <h5>Правильный ответ: {{ value3 }}</h5>
+            {% endif %}
+        {% endfor %}
+    {% endfor %}
+{% endfor %}
 <br>
 {% endblock %}
